# play-Snake

./: 01.ipynb  01.py  03.ipynb  LICENSE.txt  README.md  pyproject.toml
files/: model_snake_5x5_01.pth
