[project]
name = "play-snake"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "gym-snakegame",
    "gymnasium>=1.2.3",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pygame>=2.6.1",
    "scikit-learn>=1.8.0",
    "scipy-stubs~=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
]


[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
gym-snakegame = { git = "https://github.com/helpingstar/gym-snakegame.git" }
